background/errors.txt
    Checking ash v0.37.3+1.3.251
    Checking bevy_hierarchy v0.13.2
    Checking bevy_input v0.13.2
    Checking bevy_time v0.13.2
    Checking bevy_asset v0.13.2
    Checking windows v0.48.0
    Checking bevy_transform v0.13.2
    Checking bevy_diagnostic v0.13.2
    Checking bevy_window v0.13.2
    Checking bevy_gilrs v0.13.2
    Checking bevy_audio v0.13.2
    Checking wgpu-hal v0.19.5
    Checking accesskit_windows v0.15.1
    Checking accesskit_winit v0.17.0
    Checking bevy_winit v0.13.2
    Checking wgpu-core v0.19.4
    Checking wgpu v0.19.4
    Checking bevy_render v0.13.2
    Checking bevy_core_pipeline v0.13.2
    Checking bevy_scene v0.13.2
    Checking bevy_animation v0.13.2
    Checking bevy_sprite v0.13.2
    Checking bevy_pbr v0.13.2
    Checking bevy_text v0.13.2
    Checking bevy_ui v0.13.2
    Checking bevy_gltf v0.13.2
    Checking bevy_gizmos v0.13.2
    Checking bevy_internal v0.13.2
    Checking bevy v0.13.2
    Checking quantum_logo v0.1.0 (E:\rustlogo)
error[E0432]: unresolved import `rand`
 --> src\main.rs:7:5
  |
7 | use rand::Rng;
  |     ^^^^ use of unresolved module or unlinked crate `rand`
  |
  = help: if you wanted to use a crate named `rand`, use `cargo add rand` to add it to your `Cargo.toml`

error[E0560]: struct `bevy::prelude::Window` has no field named `clear_color`
  --> src\main.rs:31:17
   |
31 |                 clear_color: Color::hex("030308").unwrap(), // cosmic-bg
   |                 ^^^^^^^^^^^ `bevy::prelude::Window` does not have this field
   |
   = note: available fields are: `cursor`, `present_mode`, `mode`, `position`, `name` ... and 15 others

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `rand`
   --> src\main.rs:127:19
    |
127 |     let mut rng = rand::thread_rng();
    |                   ^^^^ use of unresolved module or unlinked crate `rand`
    |
    = help: if you wanted to use a crate named `rand`, use `cargo add rand` to add it to your `Cargo.toml`

error[E0502]: cannot borrow `transform` as immutable because it is also borrowed as mutable
   --> src\main.rs:244:72
    |
244 |         transform.rotation *= Quat::from_rotation_x(0.05 * (target_y - transform.rotation.x));
    |         ---------------------------------------------------------------^^^^^^^^^-------------
    |         |                                                              |
    |         |                                                              immutable borrow occurs here
    |         mutable borrow occurs here
    |         mutable borrow later used here
    |
help: try adding a local storing this...
   --> src\main.rs:244:72
    |
244 |         transform.rotation *= Quat::from_rotation_x(0.05 * (target_y - transform.rotation.x));
    |                                                                        ^^^^^^^^^^^^^^^^^^
help: ...and then using that local here
   --> src\main.rs:244:9
    |
244 |         transform.rotation *= Quat::from_rotation_x(0.05 * (target_y - transform.rotation.x));
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0502]: cannot borrow `transform` as immutable because it is also borrowed as mutable
   --> src\main.rs:245:72
    |
245 |         transform.rotation *= Quat::from_rotation_y(0.05 * (target_x - transform.rotation.y));
    |         ---------------------------------------------------------------^^^^^^^^^-------------
    |         |                                                              |
    |         |                                                              immutable borrow occurs here
    |         mutable borrow occurs here
    |         mutable borrow later used here
    |
help: try adding a local storing this...
   --> src\main.rs:245:72
    |
245 |         transform.rotation *= Quat::from_rotation_y(0.05 * (target_x - transform.rotation.y));
    |                                                                        ^^^^^^^^^^^^^^^^^^
help: ...and then using that local here
   --> src\main.rs:245:9
    |
245 |         transform.rotation *= Quat::from_rotation_y(0.05 * (target_x - transform.rotation.y));
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0432, E0433, E0502, E0560.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `quantum_logo` (bin "quantum_logo") due to 5 previous errors
